# my-rust-vibe

./: .env  .gitignore  Cargo.toml  README.md  license.txt
.github/workflows/: ci.yml  rust-ci.yml
license-server/: Cargo.toml
license-server/src/: lib.rs  main.rs
license-server/tests/: integration.rs
rpa-bin/: Cargo.toml
rpa-bin/src/: main.rs
rpa-bin/tests/: skip_license.rs
rpa-core/: Cargo.toml
rpa-core/src/: engine.rs  lib.rs  license.rs  main.rs
scripts/: automation.rhai  demo.rhai
