[package]
name = "rpa-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
sys-info = "0.9"
rpa-core = { path = "../rpa-core", features = ["ocr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "1", features = ["std"] }
base64 = "0.21"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
